<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RSA_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_message"
            android:layout_margin="15dp"
            android:textSize="15sp"
            android:textStyle="bold"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="13dp"
                android:layout_marginBottom="13dp"
                android:background="@drawable/border"
                android:hint="@string/enter_text"
                android:inputType="text"
                android:padding="12dp"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:onClick="getspeechinput"
                android:src="@drawable/ic_baseline_mic_none_24"
                tools:ignore="SpeakableTextPresentCheck" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/encrypt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:backgroundTint="#EDBC29"
                android:text="@string/encrypt" />

            <Button
                android:id="@+id/decrypt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:backgroundTint="#EDBC29"
                android:text="@string/decrypt" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:backgroundTint="#EDBC29"
                android:text="@string/send" />

            <Button
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:backgroundTint="#EDBC29"
                android:text="@string/clear" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/output_text"
            android:layout_margin="15dp"
            android:textStyle="bold"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/output_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginBottom="13dp"
            android:background="#D7F4F1E6"
            android:textIsSelectable="true"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </LinearLayout>

</LinearLayout>