<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="14dp"
    android:orientation="vertical"
    tools:context=".AESActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/enter_message"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="13dp"
                android:layout_marginBottom="13dp"
                android:background="@drawable/border"
                android:hint="@string/enter_text"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10dp" />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:onClick="getspeechinput"
                android:src="@drawable/ic_baseline_mic_none_24"
                tools:ignore="SpeakableTextPresentCheck" />

        </RelativeLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/encrypt"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:backgroundTint="#EDBC29"
                android:text="@string/encrypt"
                android:textColor="#5E35B1" />

            <Button
                android:id="@+id/decrypt"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:backgroundTint="#EDBC29"
                android:text="@string/decrypt"
                android:textColor="#5E35B1" />

        </LinearLayout>

        <Button
            android:id="@+id/clear_button"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:backgroundTint="#EDBC29"
            android:text="@string/clear"
            android:textColor="#5E35B1"
            tools:ignore="TouchTargetSizeCheck" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/send"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:backgroundTint="#EDBC29"
                android:text="@string/send"
                android:textColor="#5E35B1" />

            <Button
                android:id="@+id/reset"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:backgroundTint="#EDBC29"
                android:text="@string/reset_key"
                android:textColor="#5E35B1" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/output_text"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/output_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginBottom="13dp"
            android:background="#D7F4F1E6"
            android:textIsSelectable="true"
            android:textSize="18sp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


    </LinearLayout>

</LinearLayout>